k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auravault-backend
  namespace: auravault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auravault-backend
  template:
    metadata:
      labels:
        app: auravault-backend
    spec:
      containers:
        - name: backend
          image: epsooraj/aura-vault-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
